# AoXCloud

./: Cargo.toml  README.md  et --soft HEAD~1
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/adapters/: caldav_adapter.rs  mod.rs  webdav_adapter.rs
src/application/dtos/: address_book_dto.rs  calendar_dto.rs  contact_dto.rs  favorites_dto.rs  file_dto.rs  folder_dto.rs  i18n_dto.rs  mod.rs  pagination.rs  recent_dto.rs  search_dto.rs  share_dto.rs  trash_dto.rs  user_dto.rs
src/application/ports/: auth_ports.rs  calendar_ports.rs  carddav_ports.rs  favorites_ports.rs  file_ports.rs  inbound.rs  mod.rs  outbound.rs  recent_ports.rs  share_ports.rs  storage_ports.rs  trash_ports.rs
src/application/services/: auth_application_service.rs  batch_operations.rs  calendar_service.rs  contact_service.rs  favorites_service.rs  file_management_service.rs  file_retrieval_service.rs  file_service.rs  file_upload_service.rs  file_use_case_factory.rs  folder_service.rs  i18n_application_service.rs  mod.rs  recent_service.rs  search_service.rs  share_service.rs  storage_mediator.rs  storage_usage_service.rs  trash_service.rs  trash_service_test.rs
src/application/transactions/: mod.rs  storage_transaction.rs
src/common/: auth_factory.rs  cache.rs  config.rs  db.rs  di.rs  errors.rs  mod.rs
src/domain/entities/: calendar.rs  calendar_event.rs  contact.rs  file.rs  folder.rs  mod.rs  session.rs  share.rs  trashed_item.rs  user.rs
src/domain/repositories/: address_book_repository.rs  calendar_event_repository.rs  calendar_repository.rs  contact_repository.rs  file_repository.rs  folder_repository.rs  mod.rs  session_repository.rs  share_repository.rs  trash_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  i18n_service.rs  mod.rs  path_service.rs
src/infrastructure/repositories/: file_fs_read_repository.rs  file_fs_repository.rs  file_fs_repository_trash.rs  file_fs_write_repository.rs  file_metadata_manager.rs  file_path_resolver.rs  folder_fs_repository.rs  folder_fs_repository_trash.rs  mod.rs  parallel_file_processor.rs  share_fs_repository.rs  trash_fs_repository.rs
src/infrastructure/repositories/pg/: address_book_pg_repository.rs  calendar_event_pg_repository.rs  calendar_pg_repository.rs  contact_group_pg_repository.rs  contact_pg_repository.rs  mod.rs  session_pg_repository.rs  transaction_utils.rs  user_pg_repository.rs
src/infrastructure/services/: buffer_pool.rs  cache_manager.rs  compression_service.rs  file_metadata_cache.rs  file_system_i18n_service.rs  file_system_utils.rs  id_mapping_optimizer.rs  id_mapping_service.rs  mod.rs  trash_cleanup_service.rs  zip_service.rs
src/interfaces/: mod.rs
src/interfaces/api/: mod.rs  routes.rs
src/interfaces/api/handlers/: auth_handler.rs  batch_handler.rs  caldav_handler.rs  favorites_handler.rs  file_handler.rs  folder_handler.rs  i18n_handler.rs  mod.rs  recent_handler.rs  search_handler.rs  share_handler.rs  trash_handler.rs  webdav_handler.rs
src/interfaces/middleware/: auth.rs  cache.rs  mod.rs  redirect.rs
src/interfaces/web/: mod.rs
