[package]
name    = "oxicloud"
version = "0.1.0"
edition = "2021"

[dependencies]

# ─── Async & Tokio Ecosystem ────────────────────────────────────────────────
async-stream       = "0.3.6"
async-trait        = "0.1.89"
tokio              = { version = "1.48.0", features = ["full"] }
tokio-stream       = { version = "0.1.17", features = ["fs"] }
tokio-util         = { version = "0.7.16", features = ["io", "codec"] }

# ─── Axum & Web Server ──────────────────────────────────────────────────────
axum               = { version = "0.8.6", features = ["multipart", "http1", "tokio", "macros"] }
axum-server        = "0.7.2"
tower              = "0.5.2"
tower-http         = { version = "0.6.6", features = ["fs", "compression-gzip", "trace", "cors", "add-extension", "request-id"] }

# ─── HTTP & Networking ──────────────────────────────────────────────────────
http-body          = "1.0.1"
http-body-util     = "0.1.3"
hyper              = { version = "1.7.0", features = ["full"] }
reqwest            = { version = "0.12.24", features = ["json", "multipart"] }
url                = "2.5.7"

# ─── Serialization & Parsing ────────────────────────────────────────────────
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.145"
quick-xml          = "0.37.5"
mime_guess         = "2.0.5"

# ─── Time & Date ────────────────────────────────────────────────────────────
chrono             = { version = "0.4.42", features = ["serde"] }
time               = "0.3.44"
icalendar          = "0.16.17"

# ─── Cryptography & Security ────────────────────────────────────────────────
argon2             = "0.5.3"
jsonwebtoken       = "9.3.1"
openssl            = { version = "0.10.74", features = ["vendored"] }

# ─── Database & SQL ─────────────────────────────────────────────────────────
sqlx               = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "json"] }

# ─── Error Handling & Utilities ─────────────────────────────────────────────
anyhow             = "1.0.100"
thiserror          = "2.0.17"
futures            = "0.3.31"
dotenv             = "0.15.0"

# ─── Randomness & Math ──────────────────────────────────────────────────────
rand               = "0.9.2"
rand_core          = { version = "0.6.4", features = ["std"] }
pin-project-lite   = "0.2.16"

# ─── Logging & Tracing ──────────────────────────────────────────────────────
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# ─── Miscellaneous ──────────────────────────────────────────────────────────
bytes              = "1.10.1"
tempfile           = "3.23.0"
uuid               = { version = "1.18.1", features = ["v4", "serde"] }
flate2             = "1.1.5"
zip                = "6.0.0"

# ─── Optional & Testing ─────────────────────────────────────────────────────
mockall            = { version = "0.13.1", optional = true }

[features]
default      = []
test_utils   = ["mockall"]
migrations   = ["sqlx/migrate"]

[[bin]]
name             = "migrate"
path             = "src/bin/migrate.rs"
required-features = ["migrations"]

[profile.release]
lto             = "fat"
codegen-units   = 1
opt-level       = 3
panic           = "abort"
strip           = true

[profile.dev]
opt-level       = 1
debug           = true

[profile.bench]
lto             = "fat"
codegen-units   = 1
opt-level       = 3

